# holotype

./: .dir-locals.el  .ghci  .gitignore  .gitmodules  .nh  .travis.yml  CHANGELOG.md  CLI.hs  Cairostress.hs  HSstress.hs  Holoframe.hs  Holostress.hs  Holotype.pipeline.json  LCstress.hs  LICENSE  Main.hs  Makefile  Mood.hs  Moodel.vue  README.org  chunk.blend  chunk.md3  default-compiler.nix  default.dfr.nix  default.nix  frp.graphml  ghc-8.4-problems.org  ghc.nix  holotype.cabal  journal.org  lambdacube-compiler.src.json  lambdacube-gl.src.json  lambdacube-ir.src.json  lambdacube-overview.graphml  lambdacube-quake3.graphml  manual-overrides.nix  merge.sh  mood.cabal  nixpkgs.nix  overrides.nix  (+12 more)
Database/: Youtrack.hs
Database/Mood/: Derivatives.hs  Ground.hs  Mood.hs  MoodRest.hs  Types.hs  Utils.hs
assets/: chunk.blend  chunk.md3
doc/: ghc-repro-15499.hs  ghc-repro-16095-2.hs  ghc-repro-16095.hs  lc-resource-management.org
doc/eur/: text-lens.hs  text-zipper.hs  wires-ping-pong.hs
doc/references/: 2016 Hu, Nöllenburg - Proceedings of the 24th International Symposium on Graph Drawing and Network Visualization.html
examples/: dynamic.hs  type-map-examples.cabal
experiments/: skeleton.hs
experiments/apex/: Main.hs
experiments/app/: Main.hs
experiments/cmonad/: Main.hs
experiments/gadt/: Main.hs
experiments/ghc/: Main.hs  default.nix  shell.nix
experiments/hconfig/: Main.hs
experiments/lifted-record-holotree/: Main.hs
experiments/validation/: Main.hs
lc/: Graphics.lc  Holotype.lc  PipeDraw.lc  PipePickF.lc  PipePickU.lc  SimpleGraphics.lc
local-pins/: iohk-monitoring-framework.src-json
mood/: Engine.hs  Mood.hs  code.org
nix/: default.nix  lib.nix  manual-overrides.nix  nixpkgs.nix  overrides.nix  packages.nix  set-nixpkgs-rev.sh  update.sh
nix/pins/: default-nixpkgs-src.json  fused-effects.src.json  generics-sop.src.json  lambdacube-compiler.src.json  lambdacube-gl.src.json  reflex-animation.src.json  reflex-glfw.src.json
pkgs/: overrides.nix
pkgs/attribute/: JuicyPixels.extraLibs  JuicyPixels.repoName  bytestring-trie.extraLibs  conduit-extras.chdir  constraints.extraLibs  free.extraLibs  gtk2hs-buildtools.repoName  happy.postPatch  haskell-gi-base.repoName  haskell-src-exts-util.state  haskell-src-exts.extraLibs  hedgehog.repoName  hspec.mode  lambdacube-ir.chdir  reflex.extraLibs  semigroupoids.extraLibs  simple-reflect.state  tasty-ant-xml.state
pkgs/cache/: TypeCompose.override  fused-effects.override  graphmod.override  gtk2hs-buildtools.override  hoogle-index.override  lambdacube-compiler.override  lambdacube-gl.override  lambdacube-ir.override  lens-sop.override  monadplus.override  monoidal-containers.override  ref-tf.override  reflex-glfw.override  reflex.override  singletons.override  stylish-haskell.override  text-format.override  text-lens.override  th-desugar.override  type-map.override
pkgs/def/github/: TypeCompose.hash  TypeCompose.rev  TypeCompose.timestamp  graphmod.hash  graphmod.rev  graphmod.timestamp  gtk2hs.hash  gtk2hs.rev  gtk2hs.timestamp  lambdacube-compiler.hash  lambdacube-compiler.rev  lambdacube-compiler.timestamp  lambdacube-gl.hash  lambdacube-gl.rev  lambdacube-gl.timestamp  lambdacube-ir.hash  lambdacube-ir.rev  lambdacube-ir.timestamp  lambdacube-quake3.hash  lambdacube-quake3.rev  lambdacube-quake3.timestamp  lens-sop.hash  lens-sop.rev  lens-sop.timestamp  lens-sop.upstream  monadplus.hash  monadplus.rev  monadplus.timestamp  monoidal-containers.hash  monoidal-containers.rev  monoidal-containers.timestamp  rasa.hash  rasa.rev  rasa.timestamp  rasa.upstream  reflex-glfw.rev  reflex-glfw.timestamp  reflex-glfw.upstream  reflex.hash  reflex.rev  (+14 more)
pkgs/def/meta/: gtk2hs-buildtools.repoName  lambdacube-ir.chdir  text-lens.chdir
pkgs/def/over/: reflex.libraryHaskell  (+1 more)
pkgs/github/: Juicy.Pixels.hash  Juicy.Pixels.rev  MemoTrie.hash  MemoTrie.rev  blaze-builder.hash  blaze-builder.rev  blaze-builder.upstream  blaze-markup.rev  bytestring-trie.hash  bytestring-trie.rev  bytestring-trie.upstream  cereal.hash  cereal.rev  cereal.upstream  conduit.rev  conduit.upstream  constraints.hash  constraints.rev  doctest.hash  doctest.rev  free.hash  free.rev  generic-deriving.rev  gtk2hs.hash  gtk2hs.rev  happy.hash  happy.rev  hashtables.hash  hashtables.rev  hashtables.upstream  haskell-gi.hash  haskell-gi.rev  haskell-hedgehog.hash  haskell-hedgehog.rev  haskell-hedgehog.upstream  haskell-src-exts-util.rev  haskell-src-exts-util.upstream  haskell-src-exts.hash  haskell-src-exts.rev  haskell-src-exts.upstream  (+76 more)
pkgs/hackage/: blaze-markup.hash  conduit.hash  generic-deriving.hash  haskell-src-exts-util.hash  hlint.hash  hspec-core.hash  hspec-discover.hash  hspec-meta.hash  hspec.hash  microlens-mtl.hash  microlens-mtl.release  microlens-th.hash  microlens-th.release  microlens.hash  nanospec.hash  pretty-show.hash  singletons.hash  tasty.hash  test-framework.hash  xml-conduit.hash  yaml.hash
proto/: HoloCanvas.hs  Types.hs
src/: .dir-locals.el  AsNameItem.hs  Camera.hs  Demo.hs  Derivatives.hs  DevelMain.hs  Elsewhere.hs  Engine.hs  ExternalImports.hs  FlatDraw.hs  Flatland.hs  Flex.hs  Gear.hs  Ground.hs  Holo.hs  HoloCairo.hs  HoloCanvas.hs  HoloCube.hs  HoloFlex.hs  HoloFont.hs  HoloInput.hs  HoloMain.hs  HoloOS.hs  HoloPort.hs  HoloPrelude.hs  HoloSettings.hs  HoloSys.hs  HoloTypes.hs  HoloVis.hs  Holobench.hs  Holotype.hs  MRecord.hs  Mood.hs  MoodRest.hs  Moodel.hs  Pretty.hs  Simple.hs  Space.hs  Tracer.hs  Types.hs  (+2 more)
src/Data/: IntUnique.hs  MeasuredMonoid.hs  TypeMap.hs
src/Graphics/: Cairo.hs  FlatDraw.hs  Flatland.hs  Flex.hs
src/Holo/: Classes.hs  Classes.hs-boot  Input.hs  Instances.hs  Item.hs  Item.hs-boot  Name.hs  Name.hs-boot  Port.hs  Prelude.hs  Record.hs  System.hs  Widget.hs  Widget.hs-boot  Widget2.hs  Widget2.hs-boot
src/Reflex/: GLFW.hs  Random.hs
te/: .dir-locals.el  CHANGELOG.md  LICENSE  Makefile  ThinErr.hs  thinerr.cabal
test/: static.hs  test.hs
tests/: Cairostress.hs  FlexTest.hs  Holobench.hs  Holoframe.hs  Holostress.hs  LCstress.hs  Refstress.hs  cairostress.c
(+27 files in other folders)
