name:                holotype
version:             0.0.1
synopsis:            Graph-backed visual mind assistant.
license:             AGPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          _deepfire@feelingofgreen.ru
category:            Database
build-type:          Simple

extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:

                  Data.MeasuredMonoid

                  Elsewhere

                  Flatland
                  FlatDraw

                  Holo
                  HoloCairo
                  HoloCanvas
                  HoloCube
                  HoloFont
                  HoloSettings
                  HoloSys
                  Holotype

                  Reflex.GLFW
                  Reflex.Random

  build-depends:       aeson
                     , base >=4.8
                     , base-unicode-symbols
                     , binary
                     , bytestring
                     , containers >=0.5
                     , directory
                     , dlist
                     , exceptions >= 0.8.2.1
                     , extra
                     , filepath
                     , free
                     , ghc-prim >=0.4
                     , hashable >= 1.2.3.3
                     , lens >= 4.13.2
                     , linear >= 1.19.1.3
                     , lub
                     , metamorphic
                     , MissingH
                     , MonadRandom
                     , mono-traversable
                     , pretty
                     , pretty-show
                     , profunctors
                     , random
                     , semigroupoids >= 5.0.0.3
                     , semigroups >= 0.16.2.2
                     , text
                     , these
                     , transformers
                     , tuple
                     , unordered-containers
                     , vect
                     , vector

                     , reflex
                     , dependent-sum
                     , clock
                     , stm
                     , rapid
                     , text-lens
                     , text-zipper
                     , hspec
                     , QuickCheck

                     , hxt

                     , GLFW-b
                     , JuicyPixels
                     , lambdacube-ir
                     , lambdacube-compiler
                     , lambdacube-gl
                     , lambdacube-quake3
                     , OpenGL, OpenGLRaw
                     , proteaaudio

                     , cairo
                     , gi-cairo
                     , gi-pango
                     , gi-pangocairo
                     , haskell-gi-base

                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise

                     , mtl

                     , halive

executable holotype
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     , base

executable lcstress
  hs-source-dirs:      .
  main-is:             LCstress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     -- generic
                     , aeson
                     , base
                     , bytestring
                     , clock
                     , containers >=0.5
                     , directory
                     , lens >= 4.13.2
                     , pretty-show
                     , vector
                     -- pixel crafting
                     , cairo
                     , gi-cairo
                     , gi-pangocairo
                     , haskell-gi-base
                     -- GL
                     , GLFW-b
                     , OpenGLRaw
                     , lambdacube-compiler
                     , lambdacube-gl
                     , lambdacube-ir
                     , lambdacube-quake3

executable holostress
  hs-source-dirs:      .
  main-is:             Holostress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     -- generic
                     , base >=4.8
                     , base-unicode-symbols
                     , containers >=0.5
                     , linear
                     , text
                     , text-zipper
                     , vector
                     -- pixel crafting
                     , cairo
                     , gi-pangocairo
                     -- GL
                     , GLFW-b
                     , OpenGLRaw
                     , lambdacube-gl
                     , lambdacube-ir