name:                holotype
version:             0.0.1
synopsis:            Graph-backed visual mind assistant.
license:             AGPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            Database
build-type:          Simple

extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:

                  Elsewhere

                  Flatland
                  FlatDraw
                  Flex

                  Holo
                  HoloCairo
                  HoloCube
                  HoloFont
                  HoloOS
                  HoloPort
                  HoloPrelude

                  Reflex.GLFW
                  Reflex.Random

                  Holotype

  build-depends:       aeson
                     , base >=4.8
                     , base-unicode-symbols
                     , binary
                     , bytestring
                     , containers >=0.5
                     , directory
                     , dlist
                     , exceptions >= 0.8.2.1
                     , extra
                     , filepath
                     , free
                     , freer-simple
                     , fsnotify
                     --, generic-lens
                     , ghc-prim >=0.4
                     , hashable >= 1.2.3.3
                     , lens >= 4.13.2
                     , linear >= 1.19.1.3
                     , lub
                     , metamorphic
                     , MissingH
                     , MonadRandom
                     , mono-traversable
                     , monadplus
                     , parsers
                     , pretty
                     , pretty-show
                     , primitive
                     , profunctors
                     , random
                     , ref-tf
                     , semigroupoids >= 5.0.0.3
                     , semigroups >= 0.16.2.2
                     , singletons
                     , template-haskell
                     , text
                     , text-format
                     , these
                     , transformers
                     , trifecta
                     , unordered-containers
                     , vect
                     , vector
                     , wl-pprint-extras
                     , wl-pprint-text

                     , reflex
                     , dependent-sum
                     , clock
                     , stm
                     # , rapid
                     , text-lens
                     , text-zipper
                     , hspec
                     , QuickCheck

                     , hxt

                     , GLFW-b
                     , JuicyPixels
                     , lambdacube-ir
                     , lambdacube-compiler
                     , lambdacube-gl
                     , lambdacube-quake3
                     , OpenGL, OpenGLRaw
                     , proteaaudio

                     , cairo
                     , gi-cairo
                     , gi-pango
                     , gi-pangocairo
                     , haskell-gi-base

                     , mtl

                     , tasty
                     , tasty-expected-failure
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hedgehog
                     , hedgehog

test-suite test
  main-is:             Driver.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:
                       base       >= 4.8 && < 5.0
                     , base-unicode-symbols
                     , containers >= 0.4 && < 1.0
                     , directory  >= 1.1 && < 2.0
                     , filepath   >= 1.3 && < 2.0
                     , Glob       >= 0.8 && < 1.0
                     , lens
                     , linear
                     , tasty
                     , tasty-discover
                     , tasty-expected-failure
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hedgehog
                     , hedgehog

                     , holotype

executable holotype
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     , base

executable lcstress
  hs-source-dirs:      .
  main-is:             LCstress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     -- generic
                     , aeson
                     , base
                     , bytestring
                     , clock
                     , containers >=0.5
                     , directory
                     , lens >= 4.13.2
                     , pretty-show
                     , vector
                     -- pixel crafting
                     , cairo
                     , gi-cairo
                     , gi-pangocairo
                     , haskell-gi-base
                     -- GL
                     , GLFW-b
                     , OpenGLRaw
                     , lambdacube-compiler
                     , lambdacube-gl
                     , lambdacube-ir
                     , lambdacube-quake3

executable holostress
  hs-source-dirs:      .
  main-is:             Holostress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     -- generic
                     , base >=4.8
                     , base-unicode-symbols
                     , containers >=0.5
                     , linear
                     , text
                     , text-zipper
                     , vector
                     -- pixel crafting
                     , cairo
                     , gi-pangocairo
                     -- GL
                     , GLFW-b
                     , OpenGLRaw
                     , lambdacube-gl
                     , lambdacube-ir

executable app
  hs-source-dirs:      experiments/app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free

executable apex
  hs-source-dirs:      experiments/apex
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free

executable gadt
  hs-source-dirs:      experiments/gadt
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols

executable validation
  hs-source-dirs:      experiments/validation
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free, mtl

executable hconfig
  hs-source-dirs:      experiments/hconfig
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free, text
