name:                holotype
version:             0.0.1
synopsis:            Graph-backed visual mind assistant.
license:             AGPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            Database
build-type:          Simple

extra-source-files:  README.org
cabal-version:       >=1.10

executable holotype
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -debug -eventlog -threaded -g -static -rtsopts -fshow-warning-groups

  build-depends:       holotype
                     , base
                     , generics-sop
                     , reflex-glfw
                     , TypeCompose

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -g -static -fshow-warning-groups

  exposed-modules:

                  Elsewhere

                  Flatland
                  FlatDraw
                  Flex

                  Holo
                  HoloCairo
                  HoloOS
                  HoloPort
                  HoloPrelude
                  HoloTypes

                  Generics.SOP.Monadic
                  Reflex.Random

                  Holotype

                  Tracer

  build-depends:       GLFW-b
                     , JuicyPixels
                     , MissingH
                     , MonadRandom
                     , OpenGL, OpenGLRaw
                     , QuickCheck
                     , TypeCompose
                     , aeson
                     , aeson-pretty
                     , base
                     , base-unicode-symbols
                     , binary
                     , bytestring
                     , cairo
                     , clock
                     , containers
                     , dependent-sum
                     , directory
                     , dlist
                     , exceptions
                     , extra
                     , fclabels
                     , filepath
                     , free
                     , freer-simple
                     -- , fsnotify
                     , generics-sop
                     , ghc-prim
                     , gi-cairo
                     , gi-gobject
                     , gi-pango
                     , gi-pangocairo
                     , hashable
                     , haskell-gi-base
                     , hedgehog
                     , hspec
                     , hxt
                     , lambdacube-compiler
                     , lambdacube-gl
                     , lambdacube-ir
                     , lens
                     , lens-sop
                     , linear
                     , lub
                     , metamorphic
                     , monadplus
                     , monoidal-containers
                     , mono-traversable
                     , mtl
                     , optparse-applicative
                     , parsers
                     , pretty
                     , pretty-show
                     , primitive
                     , profunctors
                     , proteaaudio
                     , random
                     , ref-tf
                     , reflex
                     , reflex-glfw
                     , semigroupoids
                     , semigroups
                     , singletons
                     , spool
                     , stm
                     , tasty
                     , tasty-expected-failure
                     , tasty-hedgehog
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , template-haskell
                     , text
                     , text-format
                     , text-lens
                     , text-zipper
                     , these
                     , time
                     , transformers
                     , trifecta
                     , type-map
                     , unordered-containers
                     , vect
                     , vector
                     , wl-pprint-extras
                     , wl-pprint-text

test-suite test
  main-is:             Driver.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010

  other-modules:
                       FlexTest

  build-depends:       holotype
                     , base
                     , Glob
                     , base-unicode-symbols
                     , containers
                     , directory
                     , filepath
                     , hedgehog
                     , lens
                     , linear
                     , tasty
                     , tasty-discover
                     , tasty-expected-failure
                     , tasty-hedgehog
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck

executable refstress
  hs-source-dirs:      .
  main-is:             Refstress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     , base
                     , base-unicode-symbols
                     , containers
                     , GLFW-b
                     , lens
                     , ref-tf
                     , reflex
                     , reflex-glfw
                     , time

executable lcstress
  hs-source-dirs:      .
  main-is:             LCstress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     , GLFW-b
                     , OpenGLRaw
                     , aeson
                     , base
                     , bytestring
                     , cairo
                     , clock
                     , containers
                     , directory
                     , gi-cairo
                     , gi-gobject
                     , gi-pangocairo
                     , haskell-gi-base
                     , lambdacube-compiler
                     , lambdacube-gl
                     , lambdacube-ir
                     , lens
                     , pretty-show
                     , vector

executable holostress
  hs-source-dirs:      .
  main-is:             Holostress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     , GLFW-b
                     , OpenGLRaw
                     , base
                     , base-unicode-symbols
                     , bytestring
                     , cairo
                     , containers
                     , gi-pangocairo
                     , lambdacube-gl
                     , lambdacube-ir
                     , linear
                     , text
                     , text-zipper
                     , vector

executable holoframe
  -- XXX: needs an API update
  buildable:           False
  hs-source-dirs:      .
  main-is:             Holoframe.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     , GLFW-b
                     , OpenGLRaw
                     , base
                     , base-unicode-symbols
                     , cairo
                     , containers
                     , gi-pangocairo
                     , lambdacube-gl
                     , lambdacube-ir
                     , linear
                     , text
                     , text-zipper
                     , vector


executable crstress
  hs-source-dirs:      .
  main-is:             Cairostress.hs
  default-language:    Haskell2010

  build-depends:       holotype
                     , base
                     , base-unicode-symbols
                     , cairo
                     , containers
                     , gi-cairo
                     , gi-gobject
                     , gi-pango
                     , gi-pangocairo
                     , haskell-gi-base
                     , linear
                     , text
                     , text-zipper
                     , vector

executable app
  hs-source-dirs:      experiments/app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free

executable apex
  hs-source-dirs:      experiments/apex
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free

executable gadt
  hs-source-dirs:      experiments/gadt
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols

executable validation
  hs-source-dirs:      experiments/validation
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free, mtl

executable hconfig
  hs-source-dirs:      experiments/hconfig
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, free, text

executable lifted-record-holotree
  hs-source-dirs:      experiments/lifted-record-holotree
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, base-unicode-symbols, containers, lens, TypeCompose
