name:                mood
version:             0.0.1
synopsis:            Graph-backed visual mind assistant.
license:             AGPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          _deepfire@feelingofgreen.ru
category:            Database
build-type:          Simple

extra-source-files:  README.org
cabal-version:       >=1.10

executable holotype
  hs-source-dirs:      src
  main-is:             HoloMain.hs
  default-language:    Haskell2010

  build-depends:       aeson
                     , base >=4.8
                     , base-unicode-symbols
                     , binary
                     , bytestring
                     , containers >=0.5
                     , directory
                     , exceptions >= 0.8.2.1
                     , extra
                     , filepath
                     , free
                     , ghc-prim >=0.4
                     , hashable >= 1.2.3.3
                     , lens >= 4.13.2
                     , linear >= 1.19.1.3
                     , MissingH
                     , mono-traversable
                     , semigroupoids >= 5.0.0.3
                     , semigroups >= 0.16.2.2
                     , text
                     , transformers
                     , vect
                     , vector

                     , wires
                     , clock

                     , hxt

                     , GLFW-b
                     , JuicyPixels
                     , lambdacube-ir
                     , lambdacube-compiler
                     , lambdacube-gl
                     , lambdacube-quake3
                     , OpenGLRaw
                     , pretty-show
                     , proteaaudio

                     , cairo
                     , gi-gtk
                     , gi-cairo
                     , gi-pango
                     , gi-pangocairo
                     , gi-gdk
                     , haskell-gi-base

                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise

                     , mtl

executable mood
  hs-source-dirs:      src
  main-is:             Mood.hs
  default-language:    Haskell2010
  
  build-depends:       aeson >= 0.11.1.0
                     , base >=4.8
                     , base-unicode-symbols
                     , binary
                     , bytestring
                     , containers >=0.5
                     , deepseq
                     , digest
                     , directory
                     , exceptions >= 0.8.2.1
                     , filepath
                     , ghc-prim >=0.4
                     , hashable >= 1.2.3.3
                     , lens >= 4.13.2
                     , linear >= 1.19.1.3
                     , semigroupoids >= 5.0.0.3
                     , semigroups >= 0.16.2.2
                     , time >=1.5
                     , transformers
                     , unordered-containers >= 0.2.5.1
                     , vect
                     , vector
                     , cairo
                     , elerea
                     , GLFW-b
                     , hxt
                     , JuicyPixels
                     , lambdacube-ir
                     , lambdacube-gl
                     , lambdacube-quake3
                     , MissingH
                     , OpenGLRaw
                     , pretty-show
                     , proteaaudio
                     , text
                     , gi-gtk
                     , gi-cairo
                     , gi-pango
                     , gi-pangocairo
                     , gi-gdk
                     , haskell-gi-base
                     , extra
                     , mono-traversable
                     , wires