name:                type-map
version:             0.1.0.0
synopsis:            Type-indexed maps
-- description:
homepage:            https://github.com/Lysxia/type-map#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2017 Li-yao Xia
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.TypeMap
    Data.TypeMap.Internal
  if impl(ghc >= 8.0.1)
    exposed-modules:
      Data.TypeMap.TypeApplications
      Data.TypeMap.TypeApplications.Internal
      Data.TypeMap.List
      Data.TypeMap.Map
      Data.TypeMap.Vector
      Data.TypeMap.Internal.List
      Data.TypeMap.Internal.Map
      Data.TypeMap.Internal.Vector
      Data.TypeMap.Internal.Unsafe
    build-depends:
      vector
  other-modules:
    Data.TypeMap.Check
  build-depends:
    containers,
    ghc-prim,
    base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite type-map-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  default-language:    Haskell2010
  if impl(ghc >= 8.0.1)
    build-depends:
      base >= 4.9,
      type-map
  else
    buildable: False

source-repository head
  type:     git
  location: https://github.com/Lysxia/type-map
