name: type-map-examples
version: 0
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010

executable dynamic-example
  main-is: dynamic.hs
  ghc-options: -Wall
  if impl(ghc >= 8.0.1)
    build-depends:
      base,
      type-map
  else
    buildable: False
  default-language: Haskell2010
